new microservices: reminder, attachment, search, common confg, gateway service